# CookieEngine

./: .gitignore  .gitmodules.txt  CMakeLists.txt  README.md
CMake/Templates/: Resources.cfg.in
Dependencies/: CMakeLists.txt
include/: EmptyProjectGameState.h
include/Engine/Camera/: CCameraController.h
include/Engine/EditorWindows/: EditorWindow.h  WActorWindow.h  WCameraSettings.h  WMainMenuBar.h
include/Engine/GameState/: CookieBaseState.h
include/Engine/Object/: CObject.h
include/Engine/Object/Actor/: CActor.h
include/OgreCommon/Utils/: HdrUtils.h  MeshUtils.h  MiscUtils.h  ScreenSpaceReflections.h  SmaaUtils.h
src/: EmptyProject.cpp  EmptyProjectGameState.cpp
src/Engine/Camera/: CCameraController.cpp
src/Engine/EditorWindows/: EditorWindow.cpp  WActorWindow.cpp  WCameraSettings.cpp  WMainMenuBar.cpp
src/Engine/GameState/: CookieGameState.cpp
src/Engine/Object/: CObject.cpp
src/Engine/Object/Actor/: CActor.cpp
src/ImguiOgre/: ImguiManager.cpp  ImguiManager.h  ImguiRenderable.cpp
src/OgreCommon/Utils/: HdrUtils.cpp  MeshUtils.cpp  MiscUtils.cpp  SmaaUtils.cpp
